--- a/js/sb/jquery.mCustomScrollbar.css
+++ b/js/sb/jquery.mCustomScrollbar.css
@@ -53,7 +53,7 @@ y-axis
 */
 
 .mCSB_inside > .mCSB_container {
-	margin-right: 30px;
+	margin-right: 14px;
 }
 
 .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden {
