--- a/src/css/mdl/tabs/_tabs.scss
+++ b/src/css/mdl/tabs/_tabs.scss
@@ -22,7 +22,7 @@
 
 .mdl-tabs__settings {
   display: block;
-  width: 100vw;
+  width: 100%;
 }
 
 .mdl-tabs__tab-bar {
@@ -45,7 +45,7 @@
   align-content: space-between; // ||
   align-items: flex-start; // ↓
 
-  width: 100vw;
+  width: 100%;
 
   height: 48px;
   padding: 0 18px 0 0;
